2016-12-23 (0.12.9)
	ANDROID: swipe left or touch the status window to show menu
	ANDROID: fix '?' key input using gboard

2016-12-18 (0.12.9)
	ANDROID Allow input of special characters
	SDL Allow input of special characters
	Fix compile warnings from clang

2016-10-30 (0.12.9)
	Removed debugging output from RUN (windows build)

2016-10-30 (0.12.9)
	Fixed cursor when displaying the popup while editing
	Added "Save-As" option to the file menu (thanks Josip)

2016-10-24 (0.12.9)
	SDL throw error when invalid .WAV passes to PLAY

2016-10-20 (0.12.8)
	Now returns an error when arguments passed to:
	TIMER, TICKS, PROGLINE, XPOS, YPOS, RND

2016-10-12 (0.12.8)
	Added android speak API

2016-10-08 (0.12.8)
	Fix web server file handling in windows version

2016-10-07 (0.12.8)
	Added android SENSOR handling

2016-10-02 (0.12.8)
	Fix regression with array parsing

2016-10-02 (0.12.8)
	Updated error message when calling built-in FUNC without assigning the result
	Fix TAB to use character positions not pixels
	Fixed issue with nested try/catch

2016-10-01 (0.12.8)
	Fixed NOSOUND

2016-09-29 (0.12.8)
	Added android location API
	Added sound API
	Play .WAV files using PLAY("file://" + path)

2016-09-19 (0.12.8)
	Fix error handling for invalid JOIN input
	Fix SPLIT to include final empty position

2016-09-18 (0.12.8)
	Clear keyboard buffer before pause.
	Fix cursor display with INPUT command

2016-08-21 (0.12.7)
	Added 'web' sub-project (sbasicw)

2016-07-30 (0.12.7)
	Fixed value of i when FOR loop body not executed (node/1611)

2016-07-30 (0.12.7)
	Fixed screen switching when program screen has different font size

2016-07-16 (0.12.7)
	Fixed editor display issue with escaped quotes

2016-07-04 (0.12.7)
	Updated ARRAY command to handle 2d arrays
	Fixed issue with INSTR
	Fixed memory issue with REPLACE

2016-07-03 (0.12.7)
	Updated welcome screen
	Fixed some memory access issues uncovered with new test all.bas

2016-06-24 (0.12.7)
	Renamed str var "size" field "length"