@@ -1,4 +1,7 @@
 2016-12-23 (0.12.9)
+	ANDROID: added share command
+
+2016-12-23 (0.12.9)
 	ANDROID: swipe left or touch the status window to show menu
 	ANDROID: fix '?' key input using gboard
 
